--- a/css/common.css
+++ b/css/common.css
@@ -295,13 +295,13 @@ body { min-width: 1020px;}
 .header-top .post-new { margin-top: 10px; margin-right: 0; -webkit-transition: all 0.3s; transition: all 0.3s; }
 .header-top .userbox { cursor:pointer; color: #583d8b; float: right; margin-top: 10px; margin-right: 20px; line-height: 38px; -webkit-transition: all 0.3s; transition: all 0.3s; padding-left: 35px; background: url(../img/icons-sprites/icon-all/user-lg.png)no-repeat -2px 5px; position:relative;}
 
-.header-top .userbox-pop-up{display: none; position: absolute; top:50px; right: 27%; width: 150px; min-height: 100px; background: white; border-radius: 2px; box-shadow: 0px 0px 3px rgba(0,0,0,0.3); z-index: 5;}
-.header-top .userbox-pop-up li{ text-align: center; color:white;}
-.header-top .userbox-pop-up li:first-child a{ padding: 10px 0; background:#675096; color:white;}
-.header-top .userbox-pop-up li a{color:rgb(103, 80, 150); transition:0.1s all; padding: 5px 0; display: inline-block; width: 100%; height: 100%; border-top:1px dotted rgb(103, 80, 150);}
-.header-top .userbox-pop-up li:last-child a{text-align: left; padding-left: 20px; background: #d4762e; color:white; }
-.header-top .userbox-pop-up li:last-child a:hover{ background: #675096;}
-.header-top .userbox-pop-up li a i{font-style: normal; font-family: cursive; padding-left: 30px;}
+.header-top .userbox-pop-up{display: none; position: absolute; top:60px; right: 27%; width: 170px; min-height: 100px; background:white; border-radius: 2px;
+ box-shadow: 0px 0px 3px rgba(0,0,0,0.3); z-index: 5;}
+ .header-top .userbox-pop-up:after{background:  url(../img/arrow-pop-up.png)no-repeat; position: absolute; content: ''; width: 22px;height: 15px; top: -13px; left: 30px;}
+.header-top .userbox-pop-up li{ text-align: center; color:white; text-align: left;
+}
+.header-top .userbox-pop-up li a{ display:block;color:rgb(103, 80, 150); transition:0.1s all; padding: 5px 0; display: inline-block; width: 100%; height: 100%; font-size: 16px; padding-left: 15px;}
+
 .header-top .userbox-pop-up li a:hover{background:#d4762e; color:white; }
 
 .header-top .userbox:hover { text-decoration:none;color: #d4762d;  background: url(../img/icons-sprites/icon-all/user-lg-o.png)no-repeat -2px 5px;}
@@ -2590,3 +2590,24 @@ input.photoload-item:active,input.photoload-item:focus{border:0; outline: 0; }
 	position: absolute;
 	cursor: pointer;
 }
+.userbox-exit{
+	margin: 2px 10px;
+	border-top: 1px solid #bcb1d1;
+	position: relative;
+}
+
+.header-top .userbox-pop-up li.userbox-exit a{
+	color:#d4762e;
+	padding-left: 30px;
+}
+.header-top .userbox-pop-up li.userbox-exit a i{
+	position: absolute;
+	top: 8px;
+	left: 10px;
+	height: 15px;
+	width: 15px;
+	background: url(../img/power.png)no-repeat;
+}
+.header-top .userbox-pop-up li.userbox-exit a:hover{
+	color: #583d8b;
+background: none;}
