--- a/css/common.css
+++ b/css/common.css
@@ -295,9 +295,9 @@ body { min-width: 1020px;}
 .header-top .post-new { margin-top: 10px; margin-right: 0; -webkit-transition: all 0.3s; transition: all 0.3s; }
 .header-top .userbox { cursor:pointer; color: #583d8b; float: right; margin-top: 10px; margin-right: 20px; line-height: 38px; -webkit-transition: all 0.3s; transition: all 0.3s; padding-left: 35px; background: url(../img/icons-sprites/icon-all/user-lg.png)no-repeat -2px 5px; position:relative;}
 
-.header-top .userbox-pop-up{display: none; position: absolute; top:60px; right: 27%; width: 170px; min-height: 100px; background:white; border-radius: 2px;
+.header-top .userbox-pop-up{display: none; position: absolute; top:60px; right: 25%; width: 170px; min-height: 100px; background:white; border-radius: 2px;
  box-shadow: 0px 0px 3px rgba(0,0,0,0.3); z-index: 5;}
- .header-top .userbox-pop-up:after{background:  url(../img/arrow-pop-up.png)no-repeat; position: absolute; content: ''; width: 22px;height: 15px; top: -13px; left: 30px;}
+ .header-top .userbox-pop-up:after{background:  url(../img/arrow-pop-up.png)no-repeat; position: absolute; content: ''; width: 22px;height: 15px; top: -13px; left: 50px;}
 .header-top .userbox-pop-up li{ text-align: center; color:white; text-align: left;
 }
 .header-top .userbox-pop-up li a{ display:block;color:rgb(103, 80, 150); transition:0.1s all; padding: 5px 0; display: inline-block; width: 100%; height: 100%; font-size: 16px; padding-left: 15px;}
@@ -721,7 +721,7 @@ form .field:after { content: ""; display: table; clear: both; }
 
 .has-success .icon-success { display: block; }
 
-.help.help-block { position: absolute; left: 435px; top: 30px; display: block; padding: 5px 5px 5px 25px; font-size: 14px; color: #583d8b; line-height: 1.3; background: url("../img/other/icon-attention.png") no-repeat 3px 6px, #fff; box-shadow: 0 0 6px rgba(1, 1, 1, 0.2); }
+.help.help-block {z-index: 10000; position: absolute; left: 435px; top: 30px; display: block; padding: 5px 5px 5px 25px; font-size: 14px; color: #583d8b; line-height: 1.3; background: url("../img/other/icon-attention.png") no-repeat 3px 6px, #fff; box-shadow: 0 0 6px rgba(1, 1, 1, 0.2); }
 .help.help-block:after { content: ""; position: absolute; display: block; top: -20px; left: -45px; width: 41px; height: 38px; background: url("../img/other/help-arrow.png") no-repeat center center; }
 
 .icon-success { display: none; float: left; margin-top: 10px; margin-left: 10px; width: 16px; height: 16px; background: url("../img/other/icon-success.png") no-repeat center center; }
