--- a/css/common.css
+++ b/css/common.css
@@ -1161,7 +1161,7 @@ form .field:after { content: ""; display: table; clear: both; }
 .multifilters .multifilters-in.multifilters-select .nav-menu li:after { content: ""; display: table; clear: both; }
 .multifilters .multifilters-in.multifilters-select .nav-menu li label { display: block; line-height: 22px; cursor: pointer; }
 .multifilters .multifilters-in.multifilters-category .nav-menu { overflow-y: visible; max-height: none; }
-.multifilters .multifilters-in .multifilters-info-wrap { display: none; position: absolute; left: 100%; top: 0; margin-left: 10px; padding: 5px; width: 260px; height: auto; font-size: 14px; line-height: 16px; color: #d4762d; background-color: #fff; box-shadow: 0 0 6px rgba(1, 1, 1, 0.3); }
+.multifilters .multifilters-in .multifilters-info-wrap { z-index: 10; display: none; position: absolute; left: 100%; top: 0; margin-left: 10px; padding: 5px; width: 260px; height: auto; font-size: 14px; line-height: 16px; color: #d4762d; background-color: #fff; box-shadow: 0 0 6px rgba(1, 1, 1, 0.3); }
 .multifilters .multifilters-in .multifilters-info-wrap i { float: left; margin-top: 2px; margin-right: 7px; }
 .multifilters .multifilters-in .multifilters-info-wrap span { overflow: hidden; display: block; }
 .multifilters li { position: relative; }
@@ -2636,6 +2636,7 @@ float: left;
 }
     .select2-results .select2-highlighted,.select2-results__option{
     	background-color: #d4762e;
+    	color: white;
     }
     .select2-container--krajee .select2-results__option[aria-selected]{
 	color: #583d8b;
@@ -2658,10 +2659,25 @@ float: left;
     	border:0;
     	    box-shadow: 0 0 6px rgba(1, 1, 1, 0.3);
     }
-    .select2-dropdown.select2-dropdown--below,.has-success .select2-choice, .has-success .select2-choices,.select2-choice.select2-default:focus,.select2-choice.select2-default:active,.select2-container.form-control.selects:focus,.select2-container.form-control.selects:active{
+   .has-success .select2-container-active .select2-choice, .has-success .select2-container-multi.select2-container-active .select2-choices, .has-success .form-control:focus,.select2-dropdown.select2-dropdown--below,.has-success .select2-choice, .has-success .select2-choices,.select2-choice.select2-default:focus,.select2-choice.select2-default:active,.select2-container.form-control.selects:focus,.select2-container.form-control.selects:active{
     	outline: 0;
-    	border:0;
-    	box-shadow: 0 0 6px rgba(1, 1, 1, 0.3);
+
+    	    box-shadow: 0 0 6px rgba(1, 1, 1, 0.3);
+    	border:0;/*
+    	box-shadow: 0 0 5px rgb(222, 222, 222);*/
+    }
+    .select2-container .select2-choice>.select2-chosen{
+    	font-size: 16px;
+    	color: #583d8b;
+    	    font-family: Arial, sans-serif;
+    }
+    .select2-results .select2-result-label{
+    	font-size: 14px;
+    	color: #583d8b;
+    	    font-family: Arial, sans-serif;
+    }
+    .select2-results .select2-result-label:hover{
+    	color: white;
     }
     [draggable] {
   -moz-user-select: none;
@@ -2696,20 +2712,18 @@ float: left;
     color: #583d8b;
 }
 .chaked-search{
+	padding-top: 25px;
 	position: absolute;
-	bottom: -35px;
+	bottom: 0px;
 	width: 100%;
 }
 .chaked-search .area-form{
-	 min-width: 28%;
+	 min-width: 100%;
     display: inline-block;
-}
-.chaked-search .area-form+.area-form{
-	  min-width: 20%;
 }
 .chaked-search .area-form .icheckbox_square-orange + p{
 	margin-right: 0;
-	font-size: 14px;
+	font-size: 16px;
 	padding-top: 8px;
 }
 
@@ -2752,4 +2766,10 @@ float: left;
 }
 .select2-drop.select2-drop-above .select2-search input{
 	border-radius:0; 
+}
+li.multifilters-in.multifilters-checkbox.one-checkbox{
+	background: transparent;
+}
+li.multifilters-in.multifilters-checkbox.one-checkbox a{
+	background: transparent;
 }
