--- a/css/common.css
+++ b/css/common.css
@@ -2819,3 +2819,33 @@ li.multifilters-in.multifilters-checkbox.one-checkbox .nav-menu li label i{
 .blog-list-r{
 	padding-right: 50px;
 }
+#ad-two{
+ display: none;
+}
+.breadcrumbs a:hover{
+ color: #d4762d;
+}
+.select2-container--krajee.select2-container--open .select2-selection--single .select2-selection__arrow b{
+	border-color: transparent !important;
+}
+.select2-container{
+	width: 362px !important;
+}
+.select2-container--krajee .select2-selection--single .select2-selection__arrow{
+	border-left: 0 !important;
+}
+.select2-container--krajee .select2-selection--single .select2-selection__arrow b {
+    border-color: #D4762D transparent transparent transparent;
+    border-style: solid;
+    border-width: 6px 7px 0 7px;
+    height: 0;
+    left: 47%;
+    margin-left: -13px;
+    margin-top: -2px;
+    position: absolute;
+    top: 50%;
+    width: 0;
+}
+.select2-container--krajee .select2-dropdown{
+	border-color: transparent;
+}
