--- a/css/common.css
+++ b/css/common.css
@@ -949,11 +949,11 @@ form .field:after { content: ""; display: table; clear: both; }
 .form-comment:after { content: ""; display: table; clear: both; }
 .form-comment .field + .field { margin-top: 10px; }
 .form-comment .field.add-file { float: left; width: 50%; }
-.form-comment .field.add-file input { width: 100%; }
+.form-comment .field.add-file input { width: 110%; box-shadow: none;position: relative; right: 168px;}
 .form-comment .field.add-file + .field { float: left; width: 50%; }
 .form-comment .field-info { margin-top: 10px; margin-left: 20px; width: 250px; font-size: 14px; line-height: 16px; }
 .form-comment .field-info span { display: block; }
-.form-comment p { margin-left: 20px; margin-bottom: 5px; }
+.form-comment p { margin-left: 20px; margin-bottom: 5px;  overflow: hidden;}
 .form-comment i { display: inline-block; margin-right: 10px; vertical-align: middle; }
 .form-comment .form-input { width: 50%; float: none; }
 .form-comment .form-area, .form-comment .form-input { padding-left: 20px; font-size: 18px; vertical-align: middle; }
@@ -989,7 +989,7 @@ form .field:after { content: ""; display: table; clear: both; }
 .author-msg-popup * { box-sizing: border-box; }
 .author-msg-popup .title-sm { margin-top: 10px; }
 .author-msg-popup .field { position: relative; padding-bottom: 18px; }
-.author-msg-popup .help-block.form-error { position: absolute; bottom: 0; left: 0; }
+.author-msg-popup .help-block.form-error { position: absolute; bottom: -1; left: 0; }
 
 /* advert aside */
 .advert-aside { float: right; width: 304px; *zoom: 1; }
@@ -1004,7 +1004,7 @@ form .field:after { content: ""; display: table; clear: both; }
 .advert-el .submit-btn.show-phone { text-transform: none; }
 .advert-el .submit-btn .icon-all-mail-lg, .advert-el .submit-btn .icon-all-phone-lg { display: inline-block; margin-right: 15px; vertical-align: -2px; }
 .advert-el .submit-btn .icon-all-phone-lg { vertical-align: -6px; }
-.advert-el .submit-btn span + span { margin-left: 5px; font-size: 14px; color: #d0c9dc; letter-spacing: 0.05em; text-transform: uppercase; }
+.advert-el .submit-btn span + span { margin-left: 5px; font-size: 14px; color: #f0edf6;; letter-spacing: 0.05em; text-transform: uppercase; }
 .advert-el .submit-btn + .submit-btn { margin-top: 10px; }
 
 .advert-el-map { margin-top: 18px; padding: 5px 5px 20px 5px; box-shadow: 0 0 6px rgba(1, 1, 1, 0.3); }
