--- a/css/common.css
+++ b/css/common.css
@@ -850,7 +850,7 @@ form .field:after { content: ""; display: table; clear: both; }
 .breadcrumbs-list li + li { padding-left: 7px; border-left: 2px solid #8b6ec0; }
 .breadcrumbs-list li:last-child, .breadcrumbs-list li:hover { color: #d4762d; }
 
-.banner-inner-top { margin: 10px auto 0; width: 728px; height: 90px; box-shadow: 0 0 6px rgba(1, 1, 1, 0.3); }
+.banner-inner-top { margin: 10px auto 0; width: 728px; height: 90px; box-shadow: 0 0 6px rgba(1, 1, 1, 0.3); position: relative;}
 .banner-inner-top > a { display: inline-block; width: 100%; height: 100%; line-height: 90px; vertical-align: middle; text-align: center; }
 .banner-inner-top > a img { max-width: 728px; max-height: 90px; vertical-align: middle; }
 
