--- a/css/common.css
+++ b/css/common.css
@@ -1606,6 +1606,7 @@ line-height: 0.85;padding: 6px 0 0 3px; position: relative; z-index: 5;}
 .siteblog-title.standart-text-title ul{font-size: 14px; line-height: 17px; padding-top: 6px; }
 .standart-text-title ul li{ text-transform: none;}
 .standart-text-title ul li a{ font-size: 14px;}
+.standart-text-title ul li a:active,.standart-text-title ul li a:focus{color:white;}
 .standart-text-line li{margin: 20px 0; font-size: 14pt; font-weight: normal; line-height: 1.3; color: #583d8b;}
 .standart-text-line  h2{font-size: 18pt;font-family:'arial';color:#d4762d; font-weight: normal; margin-bottom: 15px; position: relative; right: 20px;}
 .standart-text-line ol h2{font-size: 18pt;font-family:'arial';color:#d4762d; font-weight: normal; margin-bottom: 15px;}
